--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,9 +1,17 @@
-
-.link-search {
+/* .link-search {
   text-align: center;
   margin: 36px;
 }
 
-.link-search .api-container {
-  text-align: center;
+.link-search .search-button {
+  background-color: lightgray;
+  padding: 9px;
+  border-radius: 25%;
 }
+
+.link-search .search-bar {
+  width: 300px;
+  height: 30px;
+  margin: 9px;
+  padding: 9px;
+} */
