--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,7 @@
 .App {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   flex-direction: column;
-  align-items: center;
   background-color: #3d6cb9;
-  height: 100%;
+  height: auto;
 }
